modified:   src/posts/10.md 	modified:   src/posts/13.md 	modified:   src/posts/4.md 	modified:   src/posts/6.md

--- a/src/posts/10.md
+++ b/src/posts/10.md
@@ -42,7 +42,7 @@ image: https://i.imgur.com/Ad1YsFW.webp
 {% if lang == 'vi' %}
   ## Hoài nghi
 
-  Nghe thấy web-based nhiều người ngay lập tức nghi ngờ về hiệu suất của dự án, không biết liệu nó có chạy được trên con Thinkpad 0.5gb ram không... Mình khuyên bạn nên xem qua [FAQ của dự án](https://desktop.kerahq.com/faq), mình đảm báo nó sẽ giải đáp hầu hết các thắc mắc mà bạn đang có.
+  Nghe thấy web-based nhiều người ngay lập tức nghi ngờ về hiệu suất của dự án, không biết liệu nó có chạy được trên con Thinkpad 0.5gb ram không... Mình khuyên bạn nên xem qua [FAQ của dự án](https://desktop.kerahq.com/faq), mình đảm bảo nó sẽ giải đáp hầu hết các thắc mắc mà bạn đang có.
 {% else %}
   ## Performance skeptical
 
