--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -17,7 +17,7 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
   - Nó [FOSS](https://wikipedia.org/wiki/Free_and_open-source_software).
   - [Nó là hệ điều hành máy tính bảo mật nhất](https://www.privacytools.io/os).
   - Và quan trọng hơn cả là khả năng cá nhân hóa vô hạn của nó.
-{% else %}=
+{% else %}
   ## Why Linux in the first place?
 
   I choose Linux over Windows and MacOS because:
@@ -37,15 +37,21 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   [Arch](https://archlinux.org) có lượng packages đồ sộ nhất _nếu_ tính cả AUR, mà AUR thỉnh thoảng khá là janky. Arch bị dính tiếng là dễ break hơn so với các distro khác, mình thấy mọi distro đều break một cách bình đẳng...
 
-  [NixOS](https://nixos.org) mặc dù có lượng packages cạnh tranh và thỉnh thoảng còn chất lương hơn với Arch, mình lại né nó sau một thời gian độ nó vì cả hệ điều hành rất janky!
+  [NixOS](https://nixos.org) mặc dù có lượng packages cạnh tranh và thỉnh thoảng còn chất lương hơn với Arch, mình lại né nó sau một thời gian dùng nó vì cả hệ điều hành rất janky!
 {% else %}
-  TODO
+  My dotfiles is quite flexible, it can be easily adapted to almost any distro. But I still have preferences (in order): Arch-based > Ubuntu-based > Fedora-based > other.
+
+  [Fedora](https://fedoraproject.org) seems to be more stable and up-to-date than [Ubuntu](https://ubuntu.com), but it doesn't have packages that aren't strictly open source, a few can still be installed but it's annoying.
+
+  [Arch](https://archlinux.org) has the most packages _if_ including the AUR, which can sometimes be quite janky. Arch has a reputation for being easier to break than other distros, but I find all distros to break equally easy...
+
+  [NixOS](https://nixos.org) is very competitive to Arch in terms of package quantity and quality. But I find Nix to be is quite janky after ricing it!
 {% endif %}
 
 ## Desktop Environment
 
 {% if lang == 'vi' %}
-  Sau một thời gian độ window manager, mình quyết định quay lại chơi DE (giải thích chi tiết hơn [ở đây](../12/#5-maximalist)) vì mình muốn tìm kiếm một trải nghiệm ổn định, hài hòa và "it just work".
+  Sau một thời gian độ window manager, mình quyết định quay lại chơi DE (giải thích chi tiết hơn [ở đây](../12/#5-maximalist)) vì mình muốn tìm kiếm một trải nghiệm ổn định, hài hòa và "it just works".
 
   Những DE như [LXDE](https://www.lxde.org) và [XFCE](https://xfce.org) khá là nhẹ, quá là nhẹ đằng khác, nó không phù hợp với mình vì nó không cá nhân hóa tốt và tiện như ý mình được.
 
@@ -55,7 +61,15 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   [Gnome](www.gnome.org) là một DE thiết kế rất hài hòa, thống nhất, tối giản và sang. Từ Windows hay DE khác chuyển sang cảm giác ban đầu sẽ bỡ ngỡ nhưng một thời gian dùng sau bạn sẽ hiểu được vẻ đẹp của thiết kế và workflow mà Gnome mang đến. Về mặt cá nhân hóa, Gnome thực ra không kém cạnh gì KDE mà thực ra còn tốt hơn: Mặc dù Gnome không hỗ trợ chính thức, bạn có thể cài [extensions để cá nhân hóa Gnome](https://extensions.gnome.org). Gnome extensions rất đa dạng và phong phú, nó hòa mình vào DE rất tốt, Gnome có extension như [Unite](https://extensions.gnome.org/extension/1287/unite) trong khi KDE khó có thể rice để làm được điều tương tự tiện như Gnome.
 {% else %}
-  TODO
+  After using window manager for a while, I decided to go back to DE (detailed explanation [here](../12/#5-maximalist)) because I wanted to find an easy and stable experience that "it just works".
+
+  Some DEs like [LXDE](https://www.lxde.org) and [XFCE](https://xfce.org) are very light, too light in fact, it is not suitable for me because it is not as customizable as I want.
+
+  DEs like [Pantheon](https://elementary.io) and [Deepin](https://www.deepin.org/en/dde) have a pretty good out-of-the-box experience, but it's quite limited when it come to customization. I recommend this DE if you love it at first sight and have no need for customization.
+
+  [KDE Plasma](https://www.kde.org/plasma-desktop) is easy to customize out-of-the-box, from the simplest things to the most advanced. Plasma is easy to configure, suitable for Linux newbies who want to rice. KDE apps are also feature-rich (e.g: [Dolphin](https://apps.kde.org/dolphin)) but its interface is a bit cramped.
+
+  [Gnome](www.gnome.org) design is very harmonious, consisted, minimalistic and elegant. Switching from Windows or other DE to Gnome initially feeling strange, but after a while you will understand the beauty of the design and a great workflow that Gnome brings to you. GNOME is actually no less than KDE but actually better when it comes to customization: Although GNOME is not officially supported, you can install [extensions](https://extensions.gnome.org). Gnome extensions are very diverse and extensive, it integrates well into DE. Gnome has extensions like [Unite](https://extensions.gnome.org/extension/1287/unite) while KDE can hardly config to do the same as convenience as Gnome.
 {% endif %}
 
 {% if lang == 'vi' %}
