--- a/src/posts/4.md
+++ b/src/posts/4.md
@@ -12,7 +12,7 @@ image: https://images.unsplash.com/photo-1508873535684-277a3cbcc4e8
 ---
 
 {% if lang == 'vi' %}
-  [Triết học UNIX](https://wikipedia.org/wiki/Unix_philosophy) được đề cao khi thiết kế công cụ CLI vì nó giúp gắn kết các công cụ riêng biệt thành một hệ sinh thái TTY thống nhất. Mỗi công cụ chỉ _"Làm một việc và làm tốt việc đó"_, điều đó giúp mọi công cụ có thể được kết nối hài hòa với nhau. Tuy vậy mình vẫn thấy không ít công cụ CLI cũ và mới có một số những tính năng hơi thừa, những tính năng này được cho vào có chủ đích là để việc sử dụng nó tiện lợi hơn nhưng trên thực thế người dùng có thể sử dụng những tính năng đó thông qua các công cụ có sẵn mà vẫn tiện không kém. Những tính năng thừa trong một công cụ CLI chỉ làm cho công cụ đó trở nên cồng kềnh phúc tạp hơn.
+  [Triết học UNIX](https://wikipedia.org/wiki/Unix_philosophy) được đề cao khi thiết kế công cụ CLI vì nó giúp gắn kết các công cụ riêng biệt thành một hệ sinh thái TTY thống nhất. Mỗi công cụ chỉ _"Làm một việc và làm tốt việc đó"_, điều đó giúp mọi công cụ có thể được kết nối hài hòa với nhau. Tuy vậy mình vẫn thấy không ít công cụ CLI cũ và mới có một số những tính năng hơi thừa, những tính năng này được cho vào có chủ đích là để việc sử dụng nó tiện lợi hơn nhưng trên thực thế người dùng có thể sử dụng những tính năng đó thông qua các công cụ có sẵn mà vẫn tiện không kém. Những tính năng thừa trong một công cụ CLI chỉ làm cho công cụ đó trở nên cồng kềnh phức tạp hơn.
 {% else %}
   [The UNIX philosophy](https://wikipedia.org/wiki/Unix_philosophy) is emphasized when it comes to designing CLI tools because it helps to tie together disparate tools into a unified TTY ecosystem. Each tool just _"Do one thing and do it well"_, which makes it possible for all tools to be harmoniously connected with each other. However, I still see many old and new CLI tools that have some redundant features. These features are included with the intention of making the tool more convenient to use, but users can already achieve it by piping to existed tools relatively convenient. Redundant features in a CLI tool only make the tool more cumbersome.
 {% endif %}
@@ -63,7 +63,7 @@ tool | cb
   ## File cài đặt
 
   Đừng bịa ra một định dạng hay một ngôn ngữ riêng để cài đặt:
-  - Nếu file cài đặt chỉ lưu trữ giá trị, hãy dùng JSON, TOML, YAML hoặc [KDL](https://kdl.dev). INI cũng được nhưng định dạng này có nhiệu hạn chế và nó không được sử dụng thông nhất cho lắm. Sử dụng định dạng phổ biến đương nhiên sẽ tốt hơn cho cả người phát triển lẫn người dùng. Các công cụ quản lý dotfiles như [Home Manager](https://github.com/nix-community/home-manager) cũng dễ dàng làm việc với các định dạng này hơn.
+  - Nếu file cài đặt chỉ lưu trữ giá trị, hãy dùng JSON, TOML, YAML hoặc [KDL](https://kdl.dev). INI cũng được nhưng định dạng này có nhiều hạn chế và nó không được sử dụng thông nhất cho lắm. Sử dụng định dạng phổ biến đương nhiên sẽ tốt hơn cho cả người phát triển lẫn người dùng. Các công cụ quản lý dotfiles như [Home Manager](https://github.com/nix-community/home-manager) cũng dễ dàng làm việc với các định dạng này hơn.
   - Nếu nó cần scripting, hãy tạo ra một giao diện CLI để mọi ngôn ngữ có thể gọi nó. Hoặc tạo ra một thư viện hay API cho Lua, Python, Ruby... Đừng tạo ra một ngôn ngữ lập trình riêng chỉ để cài đặt công cụ của bạn vì ngôn ngữ đó kiểu gì cũng thiếu thốn, ọp ẹp hơn so với một ngôn ngữ lập trình hẳn hoi.
 {% else %}
   ## Configuration
