--- a/src/posts/6.md
+++ b/src/posts/6.md
@@ -43,7 +43,7 @@ image: https://images.unsplash.com/photo-1661160094555-a798a7df499f
 {% if lang == 'vi' %}
   ### Trên máy tính
 
-  Hầu hết chúng ta đều đã và đang dùng trình duyệt web để lướt các trang mạng xã hội trên máy tính. Tuy nhiên ta không thể khẳng định điều tương tự với các ứng dụng liên lạc như Discord, Zalo, Messenger. Với những ứng dụng này mọi người lại có xu hướng tải app riêng của nó về vì nghĩ rằng là phải làm thế thì mới dùng được các tính năng như hiện thông báo, bật / tắt mic khi voice-chat. Nhưng bạn có biết rằng, bạn có thể có được những tính năng nay kể cả khi dùng trên web:
+  Hầu hết chúng ta đều đã và đang dùng trình duyệt web để lướt các trang mạng xã hội trên máy tính. Tuy nhiên ta không thể khẳng định điều tương tự với các ứng dụng liên lạc như Discord, Zalo, Messenger. Với những ứng dụng này mọi người lại có xu hướng tải app riêng của nó về vì nghĩ rằng là phải làm thế thì mới dùng được các tính năng như hiện thông báo, bật / tắt mic khi voice-chat. Nhưng bạn có biết rằng, bạn có thể có được những tính năng này kể cả khi dùng trên web:
 
   - Tất cả các ứng dụng chat phổ biến đều có tính năng hiện thông báo ở trên web nhưng một số (điển hình là Discord) để mặc định là không hiện thông báo, bạn chỉ cần vào cái đặt và bật nó lên thôi.
   - Nói đến Discord, bạn có thể bật / tắt mic bằng phím tắt khi voice-chat như dùng trong Discord mà không cần tải nó về: ([hướng dẫn cài đặt phím tắt của mic trên Windows bằng AutoHotKey](https://superuser.com/questions/55598/super-key-to-pause-mute-mic-and-mute-speakers-in-windows), [hướng dẫn tương tự trên Linux](https://askubuntu.com/questions/12100/command-to-mute-and-unmute-a-microphone)). Làm như vậy bạn có thể điều chỉnh mic khi dùng với mọi app, trên phạm vi toàn bộ hệ thống luôn.
@@ -59,12 +59,12 @@ image: https://images.unsplash.com/photo-1661160094555-a798a7df499f
 {% if lang == 'vi' %}
   ### Trên điện thoại
 
-  Từ 2014 đổ lại, hầu hết các mạng xã hội đều không thể sử dụng được trên trình duyệt web điện thoại, nó quá lag, giao diện và trải nghiệm người dùng rất là tệ so với việc tải app về dùng. Nhưng qua thời gian, điện thoại bây giờ đã nhanh hơn nhiều, các trang web cũng đã cải thiện đang kể trải nghiệm sử dụng trên trình duyệt web. Thậm chí truy cập các nền tảng này trên trình duyệt còn có nhiều mạt tốt hơn là dùng app:
+  Từ 2014 đổ lại, hầu hết các mạng xã hội đều không thể sử dụng được trên trình duyệt web điện thoại, nó quá lag, giao diện và trải nghiệm người dùng rất là tệ so với việc tải app về dùng. Nhưng qua thời gian, điện thoại bây giờ đã nhanh hơn nhiều, các trang web cũng đã cải thiện đáng kể trải nghiệm sử dụng trên trình duyệt web. Thậm chí truy cập các nền tảng này trên trình duyệt còn có nhiều mặt tốt hơn là dùng app:
 
   - Nếu bạn dùng Brave hay Firefox với [uBlock Origin](https://ublockorigin.com), bạn có ad-blocker!
   - Có thể bật Youtube ở đẳng sau.
   - Mở link ra các trang web khác tiện hơn là chuyển qua chuyển lại giữa app và trình duyệt.
-  - Bạn có thể bookmark mọi trang web và sử dụng một hệ trống quản lý bookmarks thống nhất thay vì dùng tính năng lưu bài viết rải rác ở từng mạng xã hội.
+  - Bạn có thể bookmark mọi trang web và sử dụng một hệ thống quản lý bookmarks thống nhất thay vì dùng tính năng lưu bài viết rải rác ở từng mạng xã hội.
 {% else %}
   ### On mobile
 
