modified:   src/posts/13.md

--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -88,7 +88,7 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
       - Nếu DE là Gnome thì phải có sẵn [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager).
       - Còn nếu là KDE thì [Kvantum](https://store.kde.org/p/1005410).
     - Một setup [Wine](https://www.winehq.org) tốt.
-  - Distro phái không có [vấn đề phân vùng khi dual-boot Windows](https://askubuntu.com/questions/93109/cant-write-to-ntfs-formatted-drives).
+  - Distro phải không có [vấn đề phân vùng khi dual-boot Windows](https://askubuntu.com/questions/93109/cant-write-to-ntfs-formatted-drives).
 {% else %}
   ## Other requirements
 
