--- a/src/posts/11.md
+++ b/src/posts/11.md
@@ -255,7 +255,7 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 
   <div class="overflow-x-auto whitespace-nowrap">
 
-  | Method           | Busy workspace            | Tabs workspace |
+  | Phương pháp      | Busy workspace            | Tabs workspace |
   | ---------------- | ------------------------- | -------------- |
   | **Truyền thống** | Chật chội                 | Chật chội      |
   | **Tách biệt**    | Khó dùng                  | Tốt            |
