--- a/src/posts/12.md
+++ b/src/posts/12.md
@@ -118,7 +118,7 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 
   The shell prompt is now just "`$`", `pwd` is the only torch that lights us the way in the file system.
 
-  The rice is no longer minimalist, it has become the black hole. Few are brave enough to go beyond, but some legends continue, The few features that identifies them is that they do [Linux From Scratch](https://www.linuxfromscratch.org/lfs) and know what [Linux framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) is.
+  The rice is no longer minimalist, it has become a black hole. Few are brave enough to go beyond, but some legends continue, The few features that identifies them is that they do [Linux From Scratch](https://www.linuxfromscratch.org/lfs) and know what [Linux framebuffer](https://wikipedia.org/wiki/Linux_framebuffer) is.
 {% endif %}
 
 ## 5. Maximalist
@@ -128,11 +128,11 @@ image: https://images.unsplash.com/photo-1528611434906-054c94cd012a
 {% if lang == 'vi' %}
   Sau một thời kỳ mệt mỏi cầu kì tối giản hóa rice, họ có một cái nhìn khác về sự tối giản. Họ nhận ra rằng dùng DE rất tối giản về mặt thời gian và công sức. DE nói thật cũng không bloat lắm, nó có một số tính năng mà không phải lúc nào mình cũng dùng nhưng có nó thì cũng rất tiện trong những trường hợp cơ nhỡ. Và nếu mình không cài hay config gì mà chỉ sử dụng những thứ mặc định trong máy thì dotfiles của mình sẽ gọn hơn rất nhiều!
 
-  Và như thế họ quyết định quay lại cài DE. Nhưng lần này với nhiều kinh nghiệm và kĩ năng, rice của họ chất lượng hơn bao giờ hết. Họ thậm chí còn cài thêm nhiều tính năng màu mè hơn, cá tính hơn, đi ngược lại hoàn toàn sự tối giản trước kia... Cuối cùng họ thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ chả config thêm cái gì trong máy nữa đâu.
+  Và như thế họ quyết định quay lại cài DE. Nhưng lần này với nhiều kinh nghiệm và kĩ năng, rice của họ chất lượng hơn bao giờ hết. Họ thậm chí còn cài thêm nhiều tính năng màu mè hơn, cá tính hơn, đi ngược lại hoàn toàn sự tối giản trước kia... Cuối cùng họ thấy khá ưng ý với setup của mình, nghĩ rằng mình chắc sẽ chả config thêm cái gì trong máy nữa đâu...
 {% else %}
-  After a tiresome period of extreme minimalist rice, they have a different view of minimalism. They realize that using DE is very minimal in terms of time and effort. To be honest, DE is not that bloat, It has some features that although we don't always use, but having it is still very convenient in some situation. And if I don't install or configure anything but just use the default stuff from the DE, the dotfiles will be a lot more minimal!
+  After a tiresome period of extreme minimalist rice, they have a different view of minimalism. They realize that using DE is very minimal in terms of time and effort. To be honest, DE is not that bloat, It has some features that although we don't always use, but having it is still very convenient in some situation. "And if I don't install or configure anything but just use the default stuff from the DE, the dotfiles will be a lot more minimal!"
 
-  And so they decided to go back to installing DE. But this time, with more experience and skill, their rice is better than ever. They even installed more fancy features, more personality, going against the previous minimalism... Finally they felt quite satisfied with their setup, thinking that they would never thinker with the OS ever again.
+  And so they decided to go back to installing DE. But this time, with more experience and skill, their rice is better than ever. They even installed more fancy features, more personality, going against the previous minimalism... Finally they felt quite satisfied with their setup, thinking that they would never thinker with the OS ever again...
 {% endif %}
 
 ---
