--- a/src/posts/7.md
+++ b/src/posts/7.md
@@ -24,7 +24,7 @@ image: https://images.unsplash.com/photo-1586006349222-4f422913db20
 
   Hồi đấy mình là một cậu bé ngây thơ, nghĩ rằng mình chỉ nên làm chủ một ngôn ngữ lập trình và dùng nó cho tất cả mọi thứ (và ngôn ngữ ấy là Python, một lựa chọn rất normie...). Mình dùng [Xonsh](https://xon.sh) (tóm tắt thì nó là sự kết hợp của Python và Bash) làm shell chính một thời gian, trải nghiệm tương tác với nó khá tốt nhưng scripting trên Xonsh hơi khó chịu. Vì off-side rule và list comprehension của Python nên mình khó có thể scripting ngắn gọn như mong muốn được.
 
-  Mình muốn một ngôn ngữ lập trình hẳn hoi như Python, Perl hoặc Lua nhưng với khả năng scripting tốt như [Nulshell](https://www.nushell.sh) hoặc [Elvish](https://elv.sh).
+  Mình muốn một ngôn ngữ lập trình hẳn hoi như Python, Perl hoặc Lua nhưng với khả năng scripting tốt như [Nushell](https://www.nushell.sh) hoặc [Elvish](https://elv.sh).
 
   Rồi một hôm mình thấy dòng này trên [một bài viết của Xah Lee về list comprehension](http://xahlee.info/comp/list_comprehension.html):
 {% else %}
@@ -32,7 +32,7 @@ image: https://images.unsplash.com/photo-1586006349222-4f422913db20
 
   I was a naive programmer back then, thinking that I should just master one programming language and use it for everything (and that language was Python, a very normie choice...). I used [Xonsh](https://xon.sh) (in short, it is a fusion between Python and Bash) as my main shell for a while, its interactive experience is quite good but scripting on Xonsh is a bit annoying. Because of Python's off-side rule and list comprehension, it's hard for me to scripting as short as I'd like.
 
-  I want a full-fledged programming language like Python, Perl or Lua but with good scripting features like [Nulshell](https://www.nushell.sh) or [Elvish](https://elv.sh).
+  I want a full-fledged programming language like Python, Perl or Lua but with good scripting features like [Nushell](https://www.nushell.sh) or [Elvish](https://elv.sh).
 
   Then one day I saw this line on [an article by Xah Lee about list comprehension](http://xahlee.info/comp/list_comprehension.html):
 {% endif %}
