--- a/src/posts/8.md
+++ b/src/posts/8.md
@@ -106,17 +106,15 @@ hr() {
 
 ## Rice
 
-<!--
 ### [SuperB ST](https://github.com/NNBnh/superb-st)
 
 {% if lang == 'vi' %}
   - Mô tả: Terminal ST với vừa đủ patches.
-  - Lý do drop: TODO
+  - Lý do drop: Mặc dù nhanh và tối giản nhưng nó khá là janky và việc tự bảo trì và build binary khá tốn kém thời gian công sức đối với mình.
 {% else %}
   - Description: ST-base terminal with enough patches.
-  - Abandon reason: TODO
+  - Abandon reason: Even though it's fast and minimalist, it's quite janky and maintaining / building the binary myself is quite exhausting to me.
 {% endif %}
--->
 
 ### [SuperB UI](https://github.com/superb-ui)
 
@@ -128,17 +126,15 @@ hr() {
   - Abandon reason: That's a bad idea... Environment variables are very slow, unstable, some applications/cases hard to read it. Use [Tinted Theming](https://github.com/tinted-theming), [Wpgtk](https://github.com/deviantfero/wpgtk) or [Pywal](https://github.com/dylanaraps/pywal) instead.
 {% endif %}
 
-<!--
 ### [DIYship](https://github.com/info-mono/diyship)
 
 {% if lang == 'vi' %}
   - Mô tả: DIYship là một cross-shell prompt framework cho phép bạn tạo shell prompt bằng bất kỳ ngôn ngữ lập trình nào cho bất kỳ shell nào.
-  - Lý do drop: TODO
+  - Lý do drop: Ngoại trừ việc tạo ra một sản phẩm cạnh tranh với [Starship](https://starship.rs), không ai cần DIYship cả...
 {% else %}
   - Description: DIYship is a cross-shell prompt framework that let you write your prompt with any programing language for any shell.
-  - Abandon reason: TODO
+  - Abandon reason: Except for creating a prompt that competes with [Starship](https://starship.rs), no souls need DIYship...
 {% endif %}
--->
 
 ### [Bmono](https://github.com/NNBnh/bmono)
 
