Added "A rare $EDITOR hopping"

--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -101,9 +101,9 @@ image: https://i.imgur.com/F2yJyf8.webp
 ## [No more secrets](https://github.com/bartobri/no-more-secrets)
 
 > {% if lang == 'vi' %}
->   `nms` tái dựng lại [cảnh giải mã dữ liệu nổi tiếng trong phim Sneakers](https://www.youtube.com/watch?v=F5bAa6gFvLs&t=35).
+>   `nms` tái dựng lại [cảnh giải mã dữ liệu nổi tiếng trong phim Sneakers](https://youtu.be/F5bAa6gFvLs?t=35).
 > {% else %}
->   This project provides a command line tool called `nms` that recreates the famous data decryption effect seen on screen in the 1992 hacker movie Sneakers. For reference, you can see this effect at 0:35 in [this movie clip](https://www.youtube.com/watch?v=F5bAa6gFvLs&t=35).
+>   This project provides a command line tool called `nms` that recreates the famous data decryption effect seen on screen in the 1992 hacker movie Sneakers. For reference, you can see this effect at 0:35 in [this movie clip](https://youtu.be/F5bAa6gFvLs?t=35).
 > {% endif %}
 
 ![Screenshot](https://www.brianbarto.info/static/nms/nms.gif)
