modified:   src/posts/13.md 	new file:   src/posts/16.md

--- a/src/posts/13.md
+++ b/src/posts/13.md
@@ -5,6 +5,7 @@ title:
 tags:
   - os_rice
 date: 2023-08-12
+updated: 2024-02-08
 image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ---
 
@@ -31,7 +32,7 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 ## Base Distro
 
 {% if lang == 'vi' %}
-  Dotfiles của mình khá là linh hoạt, nó có thể dễ dàng chuyển đổi sang hầu hết mọi distro. Nhưng mình vẫn có sự ưa thích theo thứ tự: Arch-based > Ubuntu-based > Fedora-based > khác.
+  Dotfiles của mình khá là linh hoạt, nó có thể dễ dàng chuyển đổi sang hầu hết mọi distro. Nhưng mình vẫn có sự ưa thích theo thứ tự: Arch-based > Ubuntu/Debian-based > Fedora-based > khác.
 
   [Fedora](https://fedoraproject.org) được cái có vẻ ổn định và cập nhật nhanh hơn so với [Ubuntu](https://ubuntu.com), nhưng nó lại không có các packages mà không thật sự mở nguồn, mấy packages vẫn cài được thôi nhưng hơn khó chịu.
 
@@ -39,7 +40,7 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
 
   [NixOS](https://nixos.org) mặc dù có lượng packages cạnh tranh và thỉnh thoảng còn chất lương hơn với Arch, mình lại né nó sau một thời gian dùng nó vì cả hệ điều hành rất janky!
 {% else %}
-  My dotfiles is quite flexible, it can be easily adapted to almost any distro. But I still have preferences (in order): Arch-based > Ubuntu-based > Fedora-based > other.
+  My dotfiles is quite flexible, it can be easily adapted to almost any distro. But I still have preferences (in order): Arch-based > Ubuntu-based > Ubuntu/Debian-based > other.
 
   [Fedora](https://fedoraproject.org) seems to be more stable and up-to-date than [Ubuntu](https://ubuntu.com), but it doesn't have packages that aren't strictly open source, a few can still be installed but it's annoying.
 
@@ -80,15 +81,13 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
   - Phải có cài đặt sẵn:
     - [Flatpak](https://www.flatpak.org).
     - Có [phông chữ CJK](https://wikipedia.org/wiki/CJK_characters).
-    - Các loại video codex và firmware.
+    - Các video codex và firmware cần thiết.
     - Các định dạng nén như [7-Zip](https://7-zip.org), [Rar](https://www.rarlab.com).
-    - Các công cụ CLI: [Git](https://git-scm.com), [FFmpeg](https://ffmpeg.org), [Curl](https://curl.se) và [WL-clipboard](https://github.com/bugaevc/wl-clipboard).
+    - Các công cụ CLI: [Git](https://git-scm.com) và [Curl](https://curl.se).
     - Input method chất lượng từ [Unikey](https://www.unikey.org) trở lên.
     - Các công cụ để rice DE:
-      - Nếu DE là Gnome thì phải có sẵn [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager).
+      - Nếu DE là Gnome thì phải có sẵn [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks) và [`gnome-browser-connector`](https://wiki.gnome.org/Projects/GnomeShellIntegration).
       - Còn nếu là KDE thì [Kvantum](https://store.kde.org/p/1005410).
-    - Một setup [Wine](https://www.winehq.org) tốt.
-  - Distro phải không có [vấn đề phân vùng khi dual-boot Windows](https://askubuntu.com/questions/93109/cant-write-to-ntfs-formatted-drives).
 {% else %}
   ## Other requirements
 
@@ -97,39 +96,25 @@ image: https://images.unsplash.com/photo-1593857362561-76566638cc3b
   - The distro should preinstalled:
     - [Flatpak](https://www.flatpak.org).
     - [A CJK font](https://wikipedia.org/wiki/CJK_characters).
-    - All type of video codex and firmware.
+    - Necessary video codex and firmware.
     - Archive format like [7-Zip](https://7-zip.org), [Rar](https://www.rarlab.com).
-    - CLI tools: [Git](https://git-scm.com), [FFmpeg](https://ffmpeg.org), [Curl](https://curl.se) and [WL-clipboard](https://github.com/bugaevc/wl-clipboard).
+    - CLI tools: [Git](https://git-scm.com) and [Curl](https://curl.se).
     - Vietnamese input method like [Unikey](https://www.unikey.org/en) or better.
     - Tools to tweaks the DE:
-      - If it's Gnome then it should have [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks), [Extension Manager](https://github.com/mjakeman/extension-manager).
+      - If it's Gnome then it should have [Gnome Tweaks](https://gitlab.gnome.org/GNOME/gnome-tweaks) and [`gnome-browser-connector`](https://wiki.gnome.org/Projects/GnomeShellIntegration).
       - If KDE then it's [Kvantum](https://store.kde.org/p/1005410).
-    - A Good [Wine](https://www.winehq.org) preset.
-  - Distro shouldn't have [partition problem when dual-booting Windows](https://askubuntu.com/questions/93109/cant-write-to-ntfs-formatted-drives).
 {% endif %}
 
 {% if lang == 'vi' %}
   ## Distro lý tưởng
 
-  Và cuối cùng lựa chọn của mình là: [Nobara](https://nobaraproject.org)!
+  [Vanilla OS](https://vanillaos.org) là một distro bất biến cho phép người dùng cài ứng dụng từ mọi Linux distro từ Arch, Fedora cho đến NixOS. Nó check rất nhiều tiêu chuẩn mà mình mong muốn từ một distro, nhưng khi mình thử cài nó hồi đầu năm 2023, nó có vẻ chưa sẵn sàng để được sử dụng thực tế... Vanilla rất janky, cho máy ngủ xong bật lại nó đơ luôn...
 
-  Nobara là một distro tập chung vào gaming, nó không check tất cả các tiêu chuẩn mình mong muốn và thi thoảng nó hơi janky. Nhưng nó có trải nghiệm out-of-the-box tốt nhất so với tất cả các distro mà mình đã trải nghiệm.
-
-  ### Những lựa chọn khá lý tưởng khác
-
-  [Vanilla OS](https://vanillaos.org) là một distro cho phép người dùng cài ứng dụng từ mọi Linux distro từ Arch, Fedora cho đến NixOS. Nó check rất nhiều tiêu chuẩn mà mình mong muốn từ một distro, nhưng khi mình thử cài nó hồi đầu năm nay, nó có vẻ chưa sẵn sàng để được sử dụng thực tế... Vanilla rất janky, cho máy ngủ xong bật lại nó đơ luôn...
-
-  [Blend OS](https://blendos.co) giống Vanilla ở khoản cho người dùng cài ứng dụng từ nhiều distro. Nó Arch-based và mình mong là nó sẽ trở thành lựa chọn ưa thích nhất của mình khi mình cài thử nó trong tương lai gần.
+  [Blend OS](https://blendos.co) giống Vanilla nhưng nó Arch-based, hơi bloat hơn Vanilla một chút nhưng dùng nó khá ổn. Nó còn cho phép người dùng chọn DE khác ngoài Gnome và người dùng có thể dễ dàng truy cập vào các công cụ CLI bên trong một container bằng cách gõ `tên-lênh.tên-container` trong terminal.
 {% else %}
   ## My ideal distro
 
-  And finally my pick is: [Nobara](https://nobaraproject.org)!
+  [Vanilla OS](https://vanillaos.org) is a immutable distro that allows users to install applications from any Linux distro from Arch, Fedora to NixOS. It checks a lot on the list but when I tried it early 2023, it didn't seem to be ready yet... Vanilla was very janky, it freezes when I wake it up after suspend...
 
-  Nobara is a gaming-focused distro, it doesn't check all the list and it's a bit janky at times. But it has the best out-of-the-box experience of all the distros I've ever used.
-
-  ### Honorable Mention
-
-  [Vanilla OS](https://vanillaos.org) is a distro that allows users to install applications from any Linux distro from Arch, Fedora to NixOS. It checks a lot on the list but when I tried it earlier this year, it didn't seem to be ready yet... Vanilla was very janky, it freezes when I wake it up after suspend...
-
-  [Blend OS](https://blendos.co) is similar to vanilla but It's Arch-based and I hope it will become my favorite choice when I try it out in the near future.
+  [Blend OS](https://blendos.co) is similar to vanilla but It's Arch-based, it's a bit bloater than Vanilla but also more stable. It also allows users to choose other DE than Gnome and Users can easily access CLI tools inside a container by write `command-name.container-name` in the terminal.
 {% endif %}
