modified:   src/posts/16.md

--- a/src/posts/16.md
+++ b/src/posts/16.md
@@ -922,7 +922,7 @@ alpine: true
 {% else %}
   Pipes that are big, bright green, and has thick edges like Mario exist in real life, not just a brainchild of Nintendo. But if you think about it, the concept of "green water pipes" is very general and has existed or been applied in many fields. It itself cannot be copyrighted by any individual or organization. But just to be sure, let's compare the pipes in Flappy Bird with Mario:
 
-  | In Flappy Bird                   | In Mario                                                | <!-- TODO -->
+  | In Flappy Bird                   | In Mario                                                |
   | -------------------------------- | ------------------------------------------------------- |
   | Player character dies on contact | Blocks the player's movement                            |
   | Can't be interacted with         | Can sometimes go into and out of or warp between worlds |
